Fix width, margin and align of nav. Also use html5 nav semantic element instead of a div.

--- a/main.css
+++ b/main.css
@@ -19,20 +19,22 @@ body {
     box-shadow: 0px 0px 10px #CCCCCC;
 }
 
-#bottom-nav {
+nav {
     position: absolute;
     bottom: 0;
-    height: 15%;
+    height: 100px;
     width: 100%;
+    text-align:center;
 
     background: -webkit-linear-gradient(top, rgba(186,186,186,0.1), rgba(186,186,186,0.6));
     background: linear-gradient(to bottom, rgba(186,186,186,0.0), rgba(186,186,186,0.5));
 }
 
 .bottom-nav-links {
-    display: block;
+    display: inline-block;
+    margin: 40px 30px;
     padding: 5px;
-    width:100px;
+    width:10%;
     background-color:transparent;
 
     border: 1px solid black;
